# UChile-FCFM-ComputationalVision-EL7008-ProcesamientoAvanzadoImagenes

./: como correr archivo c++
AgeClassif-LBP-SVM-RANDFOREST-tarea4/codigo/: CMakeLists.txt  main.cpp  readme.txt
Descrip-Matching-RANSAC-Hough-SIFT-tarea3/codigo/: CMakeLists.txt  main-2.cpp
Gauss&LaplacePyramid-tarea1/codigo/: CMakeLists.txt  tarea1.cpp
KeyPoints&DrescriptorMatching-tarea2/codigo/: keypoints
KeyPoints&DrescriptorMatching-tarea2/codigo/parte1/: CMakeLists.txt  main_parte1.cpp  sift.cpp
KeyPoints&DrescriptorMatching-tarea2/codigo/parte2/: CMakeLists.txt  main_parte2.cpp  sift.hpp
