cmake_minimum_required(VERSION 3.10)
project(tarea4)
set(CMAKE_CXX_STANDARD 11)
include_directories (include)
find_package( OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})
add_executable(tarea4 main.cpp)
target_link_libraries( tarea4 ${OpenCV_LIBS} )
